update: changelog for version 0.3.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 ChangeLog
 =========
 
+version 0.3.0 (2010.11.03)
+--------------------------
+
+    - featured new Pythonic APIs. [alaph release]
+
 version 0.2.0 (2010.08.29)
 --------------------------
 
