--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,7 @@ Contributors
 * Bernhard M. Wiedemann
 * Cristian Ciupitu
 * David Seifert
+* fubac
 * Janusz Harkot
 * Komačka Juraj
 * Matthias Kiefer
